2005-10-29 11:09 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerInsert) got it working with stored 
	ideal t values.

2005-10-28 23:20 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerIdealNodes,gridedgerIdealNodeT)
	renamed from gridedgerNodes, gridedgerNodeS to store t's, because
	they are invariant as nodes are added.

2005-10-28 17:38 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerSupportingSegment) find the segment
	value that corrisonds to a CAD edge t.

2005-10-28 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerInsert) started, but hastily retreated
	when I concluded that s will vary when I start inserting nodes,
	so I should be storing t.

2005-10-26 23:30 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridHistogram) dump hisogram data for octave/MATLAB.

2005-10-26 22:35 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeEvenly) changed alogorithm
	to do more iteration but kick out if request and last edge are
	within a 0.01. Added underrelaxation for stability.

2005-10-26 20:50 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) a --phase of -1 will test gridedger.
	the spacing is not appiled every status.

2005-10-26 17:05 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeEvenly) does iterations
	to adjust the desired length to balance edge errors.

2005-10-26 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretize) now computes target
	distribution.

2005-10-26 16:05 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerSegmentT,gridedgerSegmentMap) fixed
	read of freed memory, thanks valgrind!.
	* src/gridedger.c (gridedgerNodes) return number of nodes in
	discretization
	* src/gridedger.c (gridedgerNodeS) return s values of nodes in
	discretization
	* src/gridedger.c (gridedgerDiscretize) create a discretization
	based on constant length in metric.

2005-10-26 14:35 Mike Park  <mike.park@nasa.gov>
