@@ -1,3 +1,8 @@
+2005-10-29 15:42 Mike Park  <mike.park@nasa.gov>
+
+	* src/unit_main.c (main) --phase 1 option: added insert, error
+	handling, and output.
+
 2005-10-29 11:09 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridedger.c (gridedgerInsert) got it working with stored 
